Fixed some layout issues.

--- a/assets/src/styles/_variables.scss
+++ b/assets/src/styles/_variables.scss
@@ -21,7 +21,7 @@ $top-box-shadow: 0 -2px 2px $box-shadow-color;
 
 $grid-breakpoints: (
   xs: 0,
-  sm: 576px,
+  sm: 560px,
   md: 768px,
   lg: 992px,
   xl: 1200px
