--- a/assets/src/styles/player.scss
+++ b/assets/src/styles/player.scss
@@ -7,6 +7,8 @@
   overflow: hidden;
   justify-content: start;
   align-items: center;
+  max-width: 100vw;
+  overflow: hidden;
 
   .clickable {
     cursor: pointer;
